layout issue

--- a/main.css
+++ b/main.css
@@ -206,6 +206,7 @@ footer {
     height: 50px;
     font-family: Sukhumvit-thin, sans-serif;
     font-size: 13px;
+    margin-bottom: 20px;
 }
 footer img {
     width: 30px;
