--- a/timeline.css
+++ b/timeline.css
@@ -52,7 +52,7 @@ div.menuDot {
 }
 main.timeline {
     padding-left: 5vw;
-    padding-top: 200px;
+    padding-top: 220px;
 }
 article {
     padding-left: 7vw;
